[gd_scene load_steps=4 format=3 uid="uid://bjgn4dtw27euj"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_5drey"]
[ext_resource type="Texture2D" uid="uid://c5dyn0pac5d3j" path="res://assets/sprites/UI/menu_bg.png" id="2_qha7o"]
[ext_resource type="FontFile" uid="uid://db1afvq6nh352" path="res://DoubleHomicide.ttf" id="3_cjq7f"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5drey")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(576.02, 324.025)
scale = Vector2(3.16473, 3.16073)
texture = ExtResource("2_qha7o")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 23.0
offset_top = -123.0
offset_right = 97.0
offset_bottom = -22.0
grow_vertical = 0

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
theme_override_fonts/font = ExtResource("3_cjq7f")
theme_override_font_sizes/font_size = 66
text = "Start"

[node name="ControlsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_cjq7f")
theme_override_font_sizes/font_size = 66
text = "Controls"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../StartButton")
theme_override_fonts/font = ExtResource("3_cjq7f")
theme_override_font_sizes/font_size = 66
text = "Quit"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
